[package]
name = "quit"
version = "1.1.4"
authors = ["dylni"]
edition = "2021"
rust-version = "1.60.0"
description = """
Exit cleanly with an exit code
"""
readme = "README.md"
repository = "https://github.com/dylni/quit"
license = "MIT OR Apache-2.0"
keywords = ["exit", "code", "status", "die", "terminate"]
categories = ["command-line-interface", "rust-patterns"]
exclude = [".*", "tests.rs", "/rustfmt.toml", "/src/bin", "/tests"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
quit_macros = { version = "=1.1.4", path = "macros" }

[workspace]
members = ["macros"]
