[package]
name = "quit_macros"
version = "1.1.4"
authors = ["dylni"]
edition = "2018"
rust-version = "1.48.0"
description = """
Procedural macros used by crate quit
"""
readme = "description.md"
repository = "https://github.com/dylni/quit"
license = "MIT OR Apache-2.0"
exclude = [".*", "tests.rs", "/rustfmt.toml", "/src/bin", "/tests"]

[lib]
proc-macro = true
