[package]
name = "quit_macros"
version.workspace = true
authors = ["dylni"]
edition.workspace = true
rust-version.workspace = true
description = """
Procedural macros used by crate quit
"""
readme = "description.md"
repository.workspace = true
license.workspace = true
exclude = [".*", "tests.rs", "/rustfmt.toml", "/src/bin", "/tests"]

[lib]
proc-macro = true
